force-app/main/default/objects/Bank__c/Bank__c.object-meta.xml
<CustomObject>
    <label>Bank</label>
    <nameField>
        <displayFormat>Bank - {0000}</displayFormat>
        <label>Bank record number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>