force-app/main/default/objects/Bank__c/fields/Bank_code__c.field-meta.xml
<CustomField>
    <fullName>Bank_code__c</fullName>
    <label>Bank Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>