force-app/main/default/objects/Bank__c/fields/Bank_name__c.field-meta.xml
<CustomField>
    <fullName>Bank_name__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>