force-app/main/default/objects/Bank__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This status displays the progress of the application.</description>
    <inlineHelpText>Draft - The bank record has been created but not yet completed or submitted. 
Awaiting Documents - All required fields have been filled, and the application is now waiting for documents upload.
Submitted for Approval - The submitter has completed all steps and submitted the related case. Awaiting action from the approver. 
Bank Authorized - The case is approved by the designated approvers.
Bank Unauthorized - The case is rejected approved by the designated approvers.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Awaiting Documents</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Bank Authorized</fullName>
            </value>
            <value>
                <fullName>Bank Unauthorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>