force-app/main/default/objects/Bank__c/recordTypes/Default_Bank_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Default_Bank_Record_Type</fullName>
    <active>true</active>
    <label>Default Bank Record Type</label>
</RecordType>