force-app/main/default/objects/Bank__c/validationRules/Bank_Name_Must_Be_Title_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Name_Must_Be_Title_Case</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  ISBLANK(Bank_name__c ),
  NOT(REGEX(Bank_name__c , &quot;^[A-Z].*&quot;)),
  NOT(REGEX(Bank_name__c , &quot;^[A-Za-z0-9 &amp;.,&apos;\\-]+$&quot;)),
  Bank_name__c != TRIM(Bank_name__c )
)</errorConditionFormula>
    <errorDisplayField>Bank_name__c</errorDisplayField>
    <errorMessage>Bank Name must start with an uppercase letter and contain no leading/trailing spaces.</errorMessage>
</ValidationRule>