force-app/main/default/objects/Bank__c/validationRules/Email_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Email__c )),
    NOT(REGEX(  Email__c  , &quot;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Enter a valid email address, such as name@email.com.</errorMessage>
</ValidationRule>