force-app/main/default/objects/Bank__c/validationRules/Phone_number_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Phone_Number__c )),
    NOT(REGEX( Phone_Number__c , &quot;^\\+[0-9]{9,14}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Please make sure that Phone respects the following format: +XXXXXXXXX (starting with +CountryCode +8 digits</errorMessage>
</ValidationRule>