force-app/main/default/objects/Bank__c/validationRules/Registration_Date_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Date_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Registration_Date__c   &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Registration_Date__c</errorDisplayField>
    <errorMessage>Please make sure the registration date is not in the future</errorMessage>
</ValidationRule>