force-app/main/default/objects/Bank__c/validationRules/Valid_Bank_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Bank_Code_Format</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  ISBLANK(Bank_code__c),
  LEN(Bank_code__c) != 12,
  NOT(REGEX(Bank_code__c, &quot;^[A-Z]{4}[A-Z]{2}[A-Z0-9]{2}XX[0-9]{2}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Bank_code__c</errorDisplayField>
    <errorMessage>Bank Code must be 12 characters in format: AAAABBBBCCXXNN (e.g., DEUTDEFFXX02). Only uppercase letters and digits allowed.</errorMessage>
</ValidationRule>