force-app/main/default/objects/Bank__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bank_name__c</columns>
    <columns>Bank_code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>